:fire: Remove css files for Font Awesome and add CDN

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
 	<script src="./js/jquery-2.1.0.js"></script>
@@ -17,6 +15,8 @@
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
+
+	<script src="https://kit.fontawesome.com/69da6694f9.js" crossorigin="anonymous"></script>
 
     <title>La Panthère - Agence de web design</title>
 
@@ -89,7 +89,7 @@
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
 				<div class="text-center">
-					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<i class="fas fa-thin fa-arrow-up-right-from-square icon_bloc-2"></i>
 				</div>
 				<h3 class="mg-md text-center">
 					Web design
@@ -100,7 +100,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<i class="fas fa-thin fa-desktop icon_bloc-2"></i>
 				</div>
 				<h3 class="mg-md text-center">
 					&nbsp;Stratégie
@@ -111,7 +111,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<i class="fas fa-thin fa-pen-to-square icon_bloc-2"></i>
 				</div>
 				<h3 class="mg-md text-center">
 					Illustrations
@@ -226,22 +226,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html"><i class="fa-brands fa-twitter icon_social"></i></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html"><i class="fa-brands fa-facebook-f icon_social"></i></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html"><i class="fas fa-basketball icon_social"></i></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html"><i class="fa-brands fa-instagram icon_social"></i></a>
 						</div>
 					</div>
 					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
