:hammer: Replace certain <div> per <ul> in index.html and page2.html

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 				<h2 class="bloc_title">L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
 			</div>
 		</div>
-		<div class="row voffset-lg med-width-whitespace">
-			<div class="col-sm-4">
+		<ul class="row voffset-lg med-width-whitespace">
+			<li class="col-sm-4">
 				<div class="text-center">
 					<i class="fas fa-thin fa-arrow-up-right-from-square icon_bloc-2"></i>
 				</div>
@@ -95,8 +95,8 @@
 				<p class="text-center ">
 					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
-			</div>
-			<div class="col-sm-4">
+			</li>
+			<li class="col-sm-4">
 				<div class="text-center">
 					<i class="fas fa-thin fa-desktop icon_bloc-2"></i>
 				</div>
@@ -106,8 +106,8 @@
 				<p class="text-center ">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 				</p>
-			</div>
-			<div class="col-sm-4">
+			</li>
+			<li class="col-sm-4">
 				<div class="text-center">
 					<i class="fas fa-thin fa-pen-to-square icon_bloc-2"></i>
 				</div>
@@ -117,8 +117,8 @@
 				<p class="text-center ">
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
-			</div>
-		</div>
+			</li>
+		</ul>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 				<p class="citation">
@@ -156,8 +156,8 @@
 				<h2 class="bloc-title">Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
 			</div>
 		</div>
-		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6">
+		<ul class="row tight-width-whitespace portfolio-row">
+			<li class="col-sm-6">
 				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
@@ -165,8 +165,8 @@
 				<p class="text-center">
 					Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 				</p>
-			</div>
-			<div class="col-sm-6">
+			</li>
+			<li class="col-sm-6">
 				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
@@ -174,10 +174,10 @@
 				<p class="text-center">
 					Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 				</p>
-			</div>
-		</div>
-		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6">
+			</li>
+		</ul>
+		<ul class="row tight-width-whitespace portfolio-row">
+			<li class="col-sm-6">
 				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
@@ -185,8 +185,8 @@
 				<p class="text-center">
 					Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 				</p>
-			</div>
-			<div class="col-sm-6">
+			</li>
+			<li class="col-sm-6">
 				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
@@ -194,8 +194,8 @@
 				<p class="text-center">
 					Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 				</p>
-			</div>
-		</div>
+			</li>
+		</ul>
 	</div>
 </div>
 <!-- bloc-4-portfolio END -->
@@ -223,28 +223,28 @@
 				<p class="text-center white">
 					Agence La Panthère - Agence web basée à Lyon.<br>
 				</p>
-				<div class="row row-no-gutters social">
-					<div class="col-sm-3">
+				<ul class="row row-no-gutters social">
+					<li class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="index.html"><i class="fa-brands fa-twitter icon_social"></i></a>
 						</div>
-					</div>
-					<div class="col-sm-3">
+					</li>
+					<li class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="index.html"><i class="fa-brands fa-facebook-f icon_social"></i></a>
 						</div>
-					</div>
-					<div class="col-sm-3">
+					</li>
+					<li class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="index.html"><i class="fas fa-basketball icon_social"></i></a>
 						</div>
-					</div>
-					<div class="col-sm-3">
+					</li>
+					<li class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="index.html"><i class="fa-brands fa-instagram icon_social"></i></a>
 						</div>
-					</div>
-				</div>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</div>
