--- a/page2.html
+++ b/page2.html
@@ -132,28 +132,28 @@
 				<p class="text-center white">
 					Agence La Panthère - Agence web basée à Lyon.<br>
 				</p>
-				<div class="row row-no-gutters social">
-					<div class="col-sm-3">
+				<ul class="row row-no-gutters social">
+					<li class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="index.html"><i class="fa-brands fa-twitter icon_social"></i></a>
 						</div>
-					</div>
-					<div class="col-sm-3">
+					</li>
+					<li class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="index.html"><i class="fa-brands fa-facebook-f icon_social"></i></a>
 						</div>
-					</div>
-					<div class="col-sm-3">
+					</li>
+					<li class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="index.html"><i class="fas fa-basketball icon_social"></i></a>
 						</div>
-					</div>
-					<div class="col-sm-3">
+					</li>
+					<li class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="index.html"><i class="fa-brands fa-instagram icon_social"></i></a>
 						</div>
-					</div>
-				</div>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</div>
